infra/proxyd.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: market-proxy-deploy
spec:
  selector:
    matchLabels:
      app: market-proxy-deploy
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: market-proxy-deploy
    spec:
      containers:
        - name: market-proxy-deploy
          image: ghcr.io/asamere/market-proxy:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "32Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "2000m"
          ports:
            - containerPort: 8000
              name: http
