infra/service.yml
apiVersion: v1
kind: Service
metadata:
  name: market-proxy-service
  namespace: foundation
  labels:
    app: market-proxy
spec:
  type: ClusterIP
  ports:
    - port: 8000
      name: http
  selector:
    app: market-proxy-deploy
