infra/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  generation: 1
  name: market-proxy-ingress
  namespace: foundation
spec:
  rules:
    - host: markets.shapeshift.com
      http:
        paths:
          - backend:
              service:
                name: market-proxy-service
                port:
                  number: 8000
            pathType: ImplementationSpecific
